--- a/src/App.css
+++ b/src/App.css
@@ -13,7 +13,7 @@
   }
 }
 
-.App-header {
+.App-div {
   background-color: #282c34;
   min-height: 100vh;
   display: flex;
@@ -35,4 +35,8 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+.links {
+  text-align: center;
 }
