--- a/src/App.css
+++ b/src/App.css
@@ -12,6 +12,12 @@
     animation: App-logo-spin infinite 20s linear;
   }
 }
+.background{
+  background-size: cover;
+  text-align: center;
+  height: 400px;
+  padding: 10vh;
+}
 
 .App-div {
   background-color: #282c34;
@@ -43,4 +49,11 @@
 
 .Title {
   text-align: center;
+}
+
+.card-50{
+  width: 50%;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 6vh
 }
