--- a/src/App.css
+++ b/src/App.css
@@ -13,22 +13,12 @@
   }
 }
 .background{
-  background-size: cover;
-  text-align: center;
-  height: 400px;
-  padding: 10vh;
+  background-color: thistle;
+  /* background-color: rgba(50, 115, 220, 0.3); */
+  min-height: 100%;
+  min-width: 1024px;
 }
 
-.App-div {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
 
 .App-link {
   color: #61dafb;
@@ -55,7 +45,8 @@
   width: 50%;
   margin-left: auto;
   margin-right: auto;
-  margin-top: 6vh;
+  padding-top: 10px;
+  /* margin-top: 6vh; */
 }
 
 .logo{
