--- a/src/App.css
+++ b/src/App.css
@@ -48,7 +48,8 @@
 .card-50{
   width: 50vh;
   height: 50vh;
-  padding: 60px;
+  padding-top: 30px;
+  padding-bottom: 5px;
   margin-left: auto;
   margin-right: auto;
   margin-bottom: auto;
