--- a/src/App.css
+++ b/src/App.css
@@ -88,7 +88,7 @@
   border-radius: 50pc;
   justify-content: center;
   border: solid;
-  border-color: white;
+  border-color: thistle;
 }
 
 .imageboard {
